# LiveOV7670

./: .gitignore  CMakeLists.txt  PlatformIO_CLion_init.txt  README.md  readme_init.txt
arduino/: .gitignore  CMakeLists.txt  platformio.ini
arduino/LiveOV7670/: ExampleTftBufferedCameraFrame.cpp  ExampleUart.cpp
arduino/lib/Adafruit_GFX_Library/: Adafruit_GFX.cpp  library.json
arduino/lib/LiveOV7670/: BufferedCameraOV7670.h  CameraOV7670.h  CameraOV7670RegistersDefault.cpp
arduino/lib/LiveOV7670/buffered/: BufferedCameraOV7670.h
arduino/lib/LiveOV7670Library/: BufferedCameraOV7670_QQVGA.h  CameraOV7670.cpp  CameraOV7670.h  CameraOV7670Registers.cpp  CameraOV7670RegistersQVGA.cpp
arduino/libraries/LiveOV7670Library/: BufferedCameraOV7670.h  CameraOV7670.h  CameraOV7670RegistersQQVGA.cpp
arduino/src/: CMakeLists.txt  ExampleTftBufferedCameraFrame.cpp  ExampleTftPixelByPixelCameraFrame.cpp  ExampleUart.cpp  setup.h
arduino/src/camera/base/: CameraOV7670.cpp  CameraOV7670.h  CameraOV7670RegisterDefinitions.h  CameraOV7670Registers.cpp  CameraOV7670Registers.h  CameraOV7670RegistersBayerRGB.cpp
arduino/src/camera/buffered/: BufferedCameraOV7670.h  BufferedCameraOV7670_80x120_10hz_Grayscale.h  BufferedCameraOV7670_QQVGA.h  BufferedCameraOV7670_QQVGA_10hz.h  BufferedCameraOV7670_QQVGA_10hz_Grayscale.h  BufferedCameraOV7670_QVGA.h
arduino/src/screen/: Adafruit_ST7735_mod.cpp  Adafruit_ST7735_mod.h  GrayScaleTable.h
lib/Adafruit_GFX_Library/: .library.json
pcb/kaamera_ja_ekraan/: fp-lib-table  kaamera_ja_ekraan-cache.bak  kaamera_ja_ekraan-cache.lib  kaamera_ja_ekraan-rescue.lib  kaamera_ja_ekraan.bak  kaamera_ja_ekraan.kicad_pcb  kaamera_ja_ekraan.kicad_pcb-bak  kaamera_ja_ekraan.net  kaamera_ja_ekraan.pro  kaamera_ja_ekraan.sch
pcb/kaamera_ja_ekraan/LibMod/Indrek/: camera_ov7670.bak  levelshifter_4ch.bak  levelshifter_4ch.lib  tft_1.8inch.bak  tft_1.8inch.lib
pcb/kaamera_ja_ekraan/LibMod/Indrek/LevelShifter_4ch.pretty/: LevelShifter_2x6_10.16mm.kicad_mod
pcb/kaamera_ja_ekraan/gerber/: kaamera_ja_ekraan-B.Cu.gbl  kaamera_ja_ekraan-B.Mask.gbs  kaamera_ja_ekraan-B.SilkS.gbo  kaamera_ja_ekraan-Edge.Cuts.gm1  kaamera_ja_ekraan-F.Cu.gtl  kaamera_ja_ekraan-F.Mask.gts  kaamera_ja_ekraan-F.SilkS.gto  kaamera_ja_ekraan.drl
pcb/livecam/: fp-info-cache  fp-lib-table  livecam-cache.lib  livecam.kicad_pcb  livecam.kicad_pcb-bak  livecam.net  livecam.pro  livecam.sch  livecam.sch-bak  sym-lib-table
pcb/livecam/LibMod/Indrek/: DcDcConverter.lib  camera_ov7670.lib  tft_1.8inch.lib
pcb/livecam/LibMod/Indrek/DcDc5VUp.pretty/: DcDc5VUp.kicad_mod
pcb/livecam/gerber/: livecam-B_Cu.gbl  livecam-B_Mask.gbs  livecam-B_SilkS.gbo  livecam-Edge_Cuts.gm1  livecam-F_Cu.gtl  livecam-F_Mask.gts  livecam-F_SilkS.gto  livecam-PTH.drl
src/: .gitignore  BufferedCameraFrame.cpp  CMakeLists.txt  ExampleUart.cpp  LiveOV7670.ino  PixelByPixelCameraFrame.cpp  platformio.ini  setup.h
src/LiveOV7670/: Adafruit_ST7735_mod.cpp  ExampleGrayscale20HzInterlaced.cpp  ExampleTftBufferedCameraFrame.cpp  ExampleTftPixelByPixelCameraFrame.cpp  ExampleUart.cpp  LiveOV7670.ino  setup.h
src/camera/: BufferedCameraOV7670.h  BufferedCameraOV7670_QQVGA.h  BufferedCameraOV7670_QVGA.h  CameraOV7670_QQVGA.h  CameraOV7670_QQVGA_10hz.h  CameraOV7670_VGA.h  OV7670Initializer.cpp  OV7670Initializer.h  OV7670InitializerRegsClock.cpp  OV7670InitializerRegsDefault.cpp  OV7670InitializerRegsQQVGA.cpp  OV7670InitializerRegsRGB565.cpp  OV7670RegisterDefinitions.h  readme.txt
src/camera/base/: BufferedCameraOV7670.h  CameraOV7670.cpp  CameraOV7670.h  CameraOV7670Registers.cpp  CameraOV7670RegistersRGB565.cpp  CameraOV7670RegistersVGA.cpp  CameraOV7670RegsBayerRGB.cpp  CameraOV7670RegsClock.cpp  CameraOV7670RegsDefault.cpp  CameraOV7670RegsQQVGA.cpp  CameraOV7670RegsQVGA.cpp  CameraOV7670RegsRGB565.cpp  CameraOV7670RegsVGA.cpp  CameraOV7670RegsYUV422.cpp
src/camera/buffered/: BufferedCameraOV7670.h  BufferedCameraOV7670_QQVGA.h  BufferedCameraOV7670_QQVGA_10hz.h
src/lib/LiveOV7670Library/: BufferedCameraOV7670.h  BufferedCameraOV7670_80x120_10hz_Grayscale.h  BufferedCameraOV7670_QQVGA.h  BufferedCameraOV7670_QQVGA_10hz.h  BufferedCameraOV7670_QQVGA_10hz_Grayscale.h  BufferedCameraOV7670_QQVGA_20hz_Grayscale.h  BufferedCameraOV7670_QVGA.h  CameraOV7670.cpp  CameraOV7670.h  CameraOV7670RegisterDefinitions.h  CameraOV7670Registers.cpp  CameraOV7670Registers.h  CameraOV7670RegistersDefault.cpp  CameraOV7670RegistersQQVGA.cpp  CameraOV7670RegistersQVGA.cpp  CameraOV7670RegistersVGA.cpp  CameraOV7670RegistersYUV422.cpp
test/: CMakeLists.txt
test/fake/: Arduino.cpp  Arduino.h  CMakeLists.txt  OV7670Simulator.cpp  OV7670Simulator.h  Wire.cpp  Wire.h
test/src/: BaseCameraOV7670.cpp  basic_test.cpp  basic_test2.cpp
test/src/camera/base/: TestCameraOV7670.cpp  TestCameraOV7670Registers.cpp
test/src/camera/buffered/: TestBufferedCameraOV7670.cpp
